--- a/_config.yml
+++ b/_config.yml
@@ -25,14 +25,16 @@ theme_settings:
 
   # Header and footer text
   header_text: > #two or three lines to describe your site
-     <p> Success is not final, failure is not fatal:<br/> it is the courage to continue that counts.<br/><br/>
+     <p> Success is not final,<br/>
+     failure is not fatal:<br/>
+     it is the courage to continue that counts.<br/><br/>
      개발에 관련된 이야기를 합니다. </p>
   header_text_feature_image: assets/img/pexels/triangular.jpeg
   footer_text: >
    Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
 
   # Icons
-  rss: true  # Make sure you created a feed.xml with feed.xml layout
+  rss: false  # Make sure you created a feed.xml with feed.xml layout
   email_address: goofcode@gmail.com # Full email address, e.g. "sam@example.com"
   behance:
   bitbucket:
@@ -40,7 +42,7 @@ theme_settings:
   facebook:
   flickr:
   gitlab:
-  github: "sylhare"
+  github: "goofcode"
   google_plus:
   instagram:
   keybase:
