--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ theme_settings:
       enabled: true
     tags:
       icon: "tags"
-      enabled: false
+      enabled: true
   
   # Localization strings
   str_follow_on: "Follow on"
